<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Just Java</string>
    <string name="toppings">Toppings</string>
    <string name="whipcream">Whipped Cream</string>
    <string name="choclate">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="ordersummary">Order Summary</string>
    <string name="ordebuttontext">ORDER</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="subject_text">Coffee Order</string>
    <string name="addWhipCream">Add Whipped Cream</string>
    <string name="addChoclate">Add Chocolate</string>
    <string name="total_price">Total Price</string>
    <string name="order_summary_name">Name: <xliff:g id="name" example="Amy">Rishabh</xliff:g></string>
</resources>
